# NanumSlide

./: .gitignore  README.md  pyproject.toml
resources/styles/: main.qss
src/: __init__.py  config.py  main.py
src/agents/: __init__.py  agent_config.py  agent_context.py  base_agent.py  content_agent.py  design_agent.py  image_agent.py  orchestrator.py  research_agent.py  review_agent.py
src/core/: presentation.py  themes.py
src/core/export/: __init__.py  pptx_exporter.py
src/mcp/: __init__.py  mcp_client.py  mcp_config.py  mcp_manager.py  powerpoint_mcp.py  web_search_mcp.py
src/services/: __init__.py  chart_service.py  generation_worker.py  image_service.py  llm_client.py  presentation_generator.py  web_search_service.py
src/skills/: __init__.py  base_skill.py  enhance_skill.py  export_skill.py  outline_skill.py  research_skill.py  skill_pipeline.py  skill_registry.py  visualize_skill.py
src/templates/: __init__.py  color_schemes.py  layout_matcher.py  layout_types.py  template_builder.py  template_engine.py  template_loader.py
src/ui/: __init__.py  main_window.py  slide_editor.py  ui_theme.py
src/ui/dialogs/: __init__.py  agent_progress.py  settings_dialog.py
src/ui/widgets/: __init__.py  prompt_panel.py  slide_thumbnail.py
templates/: index.json
templates/business/pitch_deck/: template.json
templates/business/quarterly_report/: template.json
templates/education/lecture/: template.json
templates/layouts/: common.json
templates/marketing/product_launch/: template.json
templates/minimal/clean/: template.json
