[project]
name = "nanumslide"
version = "0.1.0"
description = "AI 기반 프레젠테이션 생성기 - Windows 데스크톱 애플리케이션"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "NanumSlide Team" }]
keywords = ["presentation", "ai", "pptx", "desktop"]

dependencies = [
    # GUI
    "pyside6>=6.6.0",

    # AI/LLM
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "google-generativeai>=0.4.0",

    # 프레젠테이션 생성
    "python-pptx>=0.6.21",
    "reportlab>=4.0.0",        # PDF 생성
    "pillow>=10.0.0",          # 이미지 처리

    # 유틸리티
    "httpx>=0.27.0",           # HTTP 클라이언트
    "pydantic>=2.0.0",         # 데이터 검증
    "pydantic-settings>=2.0.0", # 설정 관리
    "python-dotenv>=1.0.0",    # 환경 변수

    # 데이터 처리
    "chromadb>=0.4.0",         # 벡터 DB (RAG용)
    "pypdf>=3.0.0",            # PDF 읽기
    "pymupdf>=1.24.0",         # PDF 텍스트 추출 (fitz)
    "python-docx>=1.0.0",      # DOCX 읽기
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-qt>=4.2.0",
    "pyinstaller>=6.0.0",
    "ruff>=0.3.0",
]

[project.scripts]
nanumslide = "src.main:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-qt>=4.2.0",
    "pyinstaller>=6.0.0",
    "ruff>=0.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pyinstaller]
name = "NanumSlide"
onefile = true
windowed = true
icon = "resources/icons/app.ico"
