[project]
name = "nanumslide"
version = "0.2.0"
description = "AI 기반 프레젠테이션 생성기 - Multi-Agent 시스템 + MCP 연동"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "NanumSlide Team" }]
keywords = ["presentation", "ai", "pptx", "desktop", "multi-agent", "mcp"]

dependencies = [
    # GUI
    "pyside6>=6.6.0",

    # AI/LLM
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "google-generativeai>=0.4.0",

    # 프레젠테이션 생성
    "python-pptx>=0.6.21",
    "reportlab>=4.0.0",        # PDF 생성
    "pillow>=10.0.0",          # 이미지 처리

    # 유틸리티
    "httpx>=0.27.0",           # HTTP 클라이언트
    "pydantic>=2.0.0",         # 데이터 검증
    "pydantic-settings>=2.0.0", # 설정 관리
    "python-dotenv>=1.0.0",    # 환경 변수

    # 데이터 처리
    "chromadb>=0.4.0",         # 벡터 DB (RAG용)
    "pypdf>=3.0.0",            # PDF 읽기
    "pymupdf>=1.24.0",         # PDF 텍스트 추출 (fitz)
    "python-docx>=1.0.0",      # DOCX 읽기

    # Multi-Agent 및 비동기 처리
    "structlog>=24.0.0",       # 구조화된 로깅
    "tenacity>=8.2.0",         # 재시도 로직
    "aiofiles>=23.0.0",        # 비동기 파일 I/O
    "rich>=13.0.0",            # 터미널 UI (디버깅용)
    "aiohttp>=3.9.0",          # 비동기 HTTP 클라이언트

    # 차트 생성
    "matplotlib>=3.8.0",       # 차트 생성
    "numpy>=1.26.0",           # 수치 연산

    # MCP (Model Context Protocol)
    "mcp>=1.0.0",              # MCP SDK
    "duckduckgo-search>=6.0.0", # DuckDuckGo 검색 (무료)
]

[project.optional-dependencies]
pdf = [
    "weasyprint>=60.0",        # HTML→PDF
]
dev = [
    "pytest>=8.0.0",
    "pytest-qt>=4.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pyinstaller>=6.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[project.scripts]
nanumslide = "src.main:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-qt>=4.2.0",
    "pyinstaller>=6.0.0",
    "ruff>=0.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pyinstaller]
name = "NanumSlide"
onefile = true
windowed = true
icon = "resources/icons/app.ico"
